* Stale leapsecond file fixes from Dave Mills.
(4.2.5p173) 2009/05/08 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC6)
(4.2.5p172) 2009/05/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1175] Instability in PLL daemon mode.
* [Bug 1176] refclock_parse.c does not compile without PPSAPI.
(4.2.5p171) 2009/05/04 Released by Harlan Stenn <stenn@ntp.org>
* Autokey documentation cleanup from Dave Mills.
* [Bug 1171] line editing libs found without headers (Solaris 11)
* [Bug 1173] NMEA refclock fails with Solaris PPSAPI
* Fix problem linking msntp on Solaris when sntp subdir is configured
  before parent caused by different gethostent library search order.
* Do not clear config.cache when it is already empty.
(4.2.5p170) 2009/05/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1152] adjust PARSE to new refclock_pps logic
* Include (4.2.4p7-RC5)
* loopfilter FLL/PLL crossover cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* ntp-keygen cleanup from Dave Mills.
* crypto API cleanup from Dave Mills.
* Add NTP_CACHEVERSION mechanism to ignore incompatible config.cache
* Enable gcc -Wstrict-overflow for gsoc_sntp as well
(4.2.5p169) 2009/04/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1171] Note that we never look for -lreadline by default.
* [Bug 1090] Fix bogus leap seconds in refclock_hpgps.
(4.2.5p168) 2009/04/29 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC4)
* [Bug 1169] quiet compiler warnings
* Re-enable gcc -Wstrict-prototypes when not building with OpenSSL
* Enable gcc -Wstrict-overflow
* ntpq/ntpdc emit newline after accepting password on Windows
* Updates from Dave Mills:
* ntp-keygen.c: Updates.
* Fix the error return and syslog function ID in refclock_{param,ppsapi}.
* Make sure syspoll is within the peer's minpoll/maxpoll bounds.
* ntp_crypto.c: Use sign_siglen, not len. sign key filename cleanup.
* Bump NTP_MAXEXTEN from 1024 to 2048, update values for some field lengths.